--- a/package.json
+++ b/package.json
@@ -22,7 +22,12 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.8",
+    "@typescript-eslint/eslint-plugin": "^5.46.1",
+    "@typescript-eslint/parser": "^5.46.1",
     "autoprefixer": "^10.4.13",
+    "eslint": "^8.30.0",
+    "eslint-config-next": "13.0.7",
+    "eslint-plugin-react": "^7.31.11",
     "postcss": "^8.4.20",
     "tailwindcss": "^3.2.4"
   }
